@@ -28,7 +28,7 @@
  ** 									     ** 
  ** ************************************************************************ **/
 
-static char Id[] = "@(#)$Id: ModuleCmd_Load.c,v 1.8.4.3 2011/10/03 19:31:52 rkowen Exp $";
+static char Id[] = "@(#)$Id: ModuleCmd_Load.c,v 1.8.4.4 2012/05/17 20:54:39 rkowen Exp $";
 static void *UseId[] = { &UseId, Id };
 
 /** ************************************************************************ **/
@@ -126,13 +126,17 @@ int	ModuleCmd_Load(	Tcl_Interp	*interp,
      **  Set up the flags controling the Tcl callback functions
      **/
 
-    if( load) {
-        g_flags |= M_LOAD;
-        g_flags &= ~M_REMOVE;
-    } else {
-        g_flags |= M_REMOVE;
-        g_flags &= ~M_LOAD;
-    }
+	/* avoid changes when invoked as a subcommand */
+	if (!(g_flags & M_SUBCMD)) {
+	    if( load) {
+		g_flags |= M_LOAD;
+		g_flags &= ~M_REMOVE;
+	    } else {
+		g_flags |= M_REMOVE;
+		g_flags &= ~M_LOAD;
+	    }
+	    g_flags |= M_SUBCMD;
+	}
     
     /**
      **  Handle all module files in the order they are passed to me
