@@ -1,0 +1,28 @@
+#%Module1.0
+
+##############################################################################
+#   Modules Revision 3.0
+#   Providing a flexible user environment
+#
+#   File:		recurs/%M%
+#   Revision:		%I%
+#   First Edition:	2012/05/17
+#   Last Mod.:		%U%, %G%
+#
+#   Authors:		R.K.Owen
+#
+#   Description:	Testuite modulefile
+#   Command:
+#
+#   Invocation:
+#   Result:	%R{
+#		}R%
+#   Comment:	%C{
+#			tests recursive loading/unloading
+#		}C%
+#			
+##############################################################################
+
+puts stderr [ concat "modB " [module-info mode]]
+setenv MODB_LOADED 1
+
