@@ -56,7 +56,7 @@ set lin_help "\n----------- Module Specific Help for '$module' -----------------
 #
 
 # test loading
-test_cmd "sh" "load $module" "32\n$lm_sh_ld$lmf_sh_ld"
+test_cmd "sh" "load $module" "32800\n$lm_sh_ld$lmf_sh_ld"
 
 # test displaying
 testouterr_cmd "sh" "display $module" "2" "$modlin$modulefile:\n\n$modlin"
@@ -66,7 +66,7 @@ set env(_LMFILES_) "$modulefile"
 set env(LOADEDMODULES) "$module"
 
 # test unloading
-test_cmd "sh" "unload $module" "1\n$lm_sh_rm$lmf_sh_rm"
+test_cmd "sh" "unload $module" "32769\n$lm_sh_rm$lmf_sh_rm"
 
 # test switching
 test_cmd "sh" "switch $module $module2" "$switches$lm_sh_sw$lmf_sh_sw"
