@@ -15,6 +15,7 @@ Nov 24, 2011				R.K. Owen (rk@owen.sj.ca.us)
 	* Optionally use Tcl memory check routines for malloc/realloc.
 	* Fixed the "module purge" memory corruption (Poor Yorick)
 	* Added support for Ruby (Tammo Tjarks)
+	* Fix the flags with regards to recursive load/unload
 
 Modules 3.2.8
 Oct  1, 2010				R.K. Owen (rk@owen.sj.ca.us)
